--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -110,11 +110,11 @@
     </div>
 <div class="text-container">
   <h2 class="section-heading mt-5">A QUICK WORD ON ACCESSIBILITY</h2>
- <p class="label">ETHICAL IMPLICATIONS</p>
+ <h3 class="project-highlights-subheading mt-4">ETHICAL IMPLICATIONS</h3>
 <p class="paragraph-body">
        Roughly 15% of the US population is <a href="https://www.pewresearch.org/short-reads/2023/07/24/8-facts-about-americans-with-disabilities/#:~:text=Overall%2C%20there%20are%20about%2042.5,care%20or%20independent%20living%20difficulties.">disabled</a>, and approximately 1 in 12 men are <a href="https://www.colourblindawareness.org/colour-blindness/#:~:text=Colour%20(color)%20blindness%20(colour,and%201%20in%20200%20women.">colorblind</a>. Stats like these frequently get ignored in the initial phase of a digital product because founders work against time and underestimate their possible success. But as soon as they have more than a few hundred users, you can confidently say that at least a few of them need a more accessible product. 
       </p>
-  <p class="label">LEGAL IMPLICATIONS</p>
+  <h3 class="project-highlights-subheading mt-4">LEGAL IMPLICATIONS</h3>
 <p class="paragraph-body">
   Most Western countries have laws either encouraging accessible products or punishing the ones that are not accessible. Some such regulations and standards are:
       </p>
@@ -132,7 +132,7 @@
     WCAG, established by the World Wide Web Consortium (W3C), offers recommendations for crafting web content that is inclusive to individuals with disabilities. These standards guarantee that websites and web applications are designed to be perceivable, operable, understandable, and robust, thus broadening access to online information and services. Additionally, penalties and fines for non-compliance can vary depending on the specific laws and regulations in a given jurisdiction.
     </p>
   </ol>
-  <p class="label">BUSINESS IMPACT</p>
+  <h3 class="project-highlights-subheading mt-4">BUSINESS IMPACT</h3>
 <p class="paragraph-body">
   Many governments and large organizations insist on using accessible products internally, which means if your target customer is one of these companies, your products will have to undergo some level of accessibility testing in order to sell them the product.
 </p>
