--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -134,7 +134,7 @@
   </ol>
   <h3 class="project-highlights-subheading mt-4">BUSINESS IMPACT</h3>
 <p class="paragraph-body">
-  Many governments and large organizations insist on using accessible products internally, which means if your target customer is one of these companies, your products will have to undergo some level of accessibility testing in order to sell them the product.
+  Many governments and large organizations insist on using accessible products internally, which means if your target customer is one of these companies, your product will have to be highly accessible by different groups of people.
 </p>
 </div>
     <div class="text-container">
