--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -44,12 +44,12 @@
       </div>
 
       <p class="paragraph-body">
-        Our client is a US-based healthcare solution company that breaks down barriers to mental well-being. They offer a blend of tech-powered tools, personalized coaching, and even therapy, all seamlessly integrated and tailored to individual needs. This innovative approach empowers people to take charge of their mental health, making it accessible and convenient for everyone.
+        Our client is a US-based healthcare solution company that breaks down barriers to mental well-being. They offer a blend of tech-powered tools, personalized coaching, and therapy, all seamlessly integrated and tailored to individual needs. This innovative approach empowers people to take charge of their mental health, making it accessible and convenient for everyone.
       </p>
 
       <h2 class="section-heading mt-5">WHAT WE DID</h2>
       <p class="paragraph-body">
-        As our client expanded, reaching new and diverse customers became crucial. However, the application wasn't accessible to many potential users, including those with disabilities, creating ethical and legal concerns. This limited market reach and hindered inclusivity. 
+        As our client's business grew, reaching new and diverse customers became crucial. However, the application wasn't accessible to many potential users, including those with disabilities, creating ethical and legal concerns. This limited market reach and hindered inclusivity. 
       </p>
       <p class="paragraph-body">
         We embraced accessibility as a strategic business driver and after a thorough audit, we tackled over 1,000 issues across the user experience while prioritizing the needs of diverse users:
