--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -10,7 +10,7 @@
       <div class="stats-container mt-5">
         <div class="stats">
           <p>AA</p>
-          <p>WCAG 2.1 Standard achieved</p>
+          <p>WCAG 2.1 Standard achieved*</p>
         </div>
         <div class="stats">
           <p>1000+</p>
@@ -273,6 +273,9 @@
       </p>
        <p class="paragraph-body mt-3">
         We utilized tools like the PDF Accessibility Checker (PAC) to verify compliance with these standards, ensuring that our PDFs are accessible to a wide range of users.
+      </p>
+      <p class="paragraph-body">
+        *WCAG has 3 levels: A, AA, AAA. AA ensures high accessibility for most users, while A addresses some issues and AAA covers the widest range of guidelines.
       </p>
     </div>
   </div>
