--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -275,7 +275,7 @@
         We utilized tools like the PDF Accessibility Checker (PAC) to verify compliance with these standards, ensuring that our PDFs are accessible to a wide range of users.
       </p>
       <p class="paragraph-body">
-        *WCAG has 3 levels: A, AA, AAA. AA ensures high accessibility for most users, while A addresses some issues and AAA covers the widest range of guidelines.
+       <i>*WCAG has 3 levels: A, AA, AAA. AA ensures high accessibility for most users, while A addresses some issues and AAA covers the widest range of guidelines.</i> 
       </p>
     </div>
   </div>
