--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -10,7 +10,7 @@
     <p>
       You were caught scrolling too fast!🚨
       <br>
-      Tell me your email so that I can inform and monitor you next time we release a blog.
+      Tell me your email so that I can inform you next time we release a blog.
     </p>
 
     <div id="subscription-form-input">
