--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
-<footer class="bg-custom section pb-6">
+<footer class="bg-custom section pb-3">
   <div class="container">
-    <div class="d-flex flex-column flex-sm-row justify-content-between mb-4">
+    <div class="d-flex flex-column flex-sm-row justify-content-between mb-4 mt-0">
         <div class="d-flex align-items-center">
             <a class="d-block h3" href="{{ site.BaseURL | absLangURL}}">
                 {{ with site.Params.logo_alt }}
@@ -20,14 +20,16 @@
         </div>
     </div>
 
-    <div class="border-top border-default py-6 d-flex justify-content-between align-items-center">
-        <div class="content">
-            {{ site.Copyright | markdownify }}
-        </div>
-        <div class="d-flex align-items-center footer-top">
-            {{ range site.Menus.footer_bottom }}
-                <ul><a href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a></ul>
-            {{ end }}
+    <div class="border-top border-default py-3">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="content">
+                {{ site.Copyright | markdownify }}
+            </div>
+            <div class="d-flex align-items-center footer-top">
+                {{ range site.Menus.footer_bottom }}
+                    <ul><a href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a></ul>
+                {{ end }}
+            </div>
         </div>
     </div>
   </div>
