--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -202,7 +202,7 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
 
   /* Footer */
   :root {
-    --footer-fg-color: #E1E2E6;
+    --footer-fg-color: #e1e2e6;
   }
 
   footer {
@@ -266,6 +266,12 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     padding-top: 16px;
     margin-bottom: -8px;
     letter-spacing: 1px;
+  }
+
+    @media (max-width: 760px) {
+    .footer-top-links ul {
+        padding: 0;
+    }
   }
 
   .badge {
