fix: for small screen pagination

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -59,7 +59,7 @@
                 </article>
             </div>
             {{ end }}
-            <div class="col-12">
+            <div class="col-12 pagination">
                 {{ template "_internal/pagination.html" . }}
             </div>
         </div>
