--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -268,9 +268,14 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     letter-spacing: 1px;
   }
 
-    @media (max-width: 760px) {
+  @media (max-width: 760px) {
     .footer-top-links ul {
-        padding: 0;
+      padding: 0;
+    }
+
+    .pagination {
+      max-width: 100%;
+      transform: scale(0.9);
     }
   }
 
