feat: better footer cetralization

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -100,6 +100,10 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
       padding: 0;
     }
 
+    .footer-bottom-links ul {
+      padding: 0;
+    }
+
     .pagination {
       max-width: 100%;
       transform: scale(0.9);
