--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-custom section py-3">
+<footer class="bg-custom section py-5">
   <div class="container">
     <div class="d-flex flex-lg-row flex-column justify-content-between align-items-lg-start align-items-center mb-4 mt-0 footer-top">
         <div class="logo-container">
@@ -8,7 +8,7 @@
                 {{ end }}
             </a>
         </div>
-        <div class="d-flex flex-md-row flex-column align-items-center align-items-sm-start footer-top-links">
+        <div class="d-flex flex-md-row flex-column align-items-center footer-top-links">
             {{ range site.Menus.footer_top }}
                 <ul class="py-1"><a href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a></ul>
             {{ end }}
@@ -27,7 +27,7 @@
             </div>
             <div class="d-flex align-items-center footer-bottom-links">
                 {{ range site.Menus.footer_bottom }}
-                    <ul class="py-2"><a href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a></ul>
+                    <ul class="p-2"><a href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a></ul>
                 {{ end }}
             </div>
         </div>
