--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,8 @@
   <!-- <div class="container"> -->
   <div class="">
     <!-- navbar -->
-    <nav class="navbar navbar-expand navbar-light bg-transparent">
-      <a class="navbar-brand" href="{{ site.Params.homeURL | absLangURL }}">
+    <nav class="navbar navbar-expand navbar-light bg-transparent p-0 px-sm-2 py-sm-3">
+      <a class="navbar-brand d-none d-sm-block" href="{{ site.Params.homeURL | absLangURL }}">
         {{ with site.Params.logo}}
         <img
           width="130px"
