bugfix: Update back link to use browser history

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
   <div class="container">
     <article class="row">
       <div class="col-lg-8 mx-auto">
-        <a class="back-link" href="{{.Site.BaseURL}}"
+        <a class="back-link" href="javascript:history.back()"
           ><strong>←</strong> Back to Blog</a
         >
         <img
