fix: dark theme text colors

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -333,6 +333,10 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     color: #fff;
   }
 
+  body.dark-theme p {
+    color: #fff;
+  }
+
   body.dark-theme .card-text {
     color: #fff;
   }
