Dont show "Posts" title on author list page but show it on individual author page

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
         </div>
         {{end}}
 
-        {{ if not (eq .Section "authors") }}
+        {{ if not (eq .RelPermalink "/authors/") }}
             <div class="display-4">Posts</div>
         {{ end }}
 
