Dont show By and Date for Tag in Tag list

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -54,7 +54,7 @@
                         <span class="badge rounded-pill bg-dark"> <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
                         {{ end }}
                         <p class="card-text">{{ .Summary | truncate 120 "..." }} </p>
-                        {{ if not (eq .Section "authors") }}
+                        {{ if not (or (eq .Section "authors") (eq .Section "tags")) }}
                             <p class="blockquote-footer text-right">
                                 By {{range .Params.authors}}
                                 <a href="/authors/{{ . | urlize }}">{{ . }}</a>, {{ end }} on {{
