docs: disable recommended case study from a11y

--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -279,7 +279,7 @@
       </p>
     </div>
   </div>
-  {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
+  {{ partial "lets-talk.html" . }}
 </div>
 
 <style>
