fix: case study dark theme colors

--- a/layouts/partials/case-study-styles.html
+++ b/layouts/partials/case-study-styles.html
@@ -377,4 +377,44 @@
 
     color: #0e3252;
   }
+
+  body.dark-theme .case-study .title {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .paragraph-body {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .paragraph-body-list {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .item-list {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .what-we-did-container > .item > .label {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .what-we-did-container > .item > .index {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .project-highlights-grid > a > .item > .index {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .project-highlights-grid > a > .item > .label {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .details-box > p {
+    color: #ffffff !important;
+  }
+
+  body.dark-theme .details-box > p:first-child {
+    color: #cccccc !important;
+  }
 </style>
