--- a/layouts/partials/case-study-styles.html
+++ b/layouts/partials/case-study-styles.html
@@ -64,11 +64,11 @@
     min-width: 200px !important;
   }
 
-  .stats>p {
+  .stats > p {
     margin: 0;
   }
 
-  .stats>p:first-child {
+  .stats > p:first-child {
     color: #0e3252;
     font-size: 60px;
     line-height: 32px;
@@ -137,7 +137,7 @@
     background-color: #f1f1f1;
   }
 
-  .banner-container>img {
+  .banner-container > img {
     width: 100%;
     margin: 0 auto 0 auto;
     display: flex;
@@ -154,7 +154,7 @@
     margin-bottom: 20px;
   }
 
-  .details-box>p {
+  .details-box > p {
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
@@ -162,7 +162,7 @@
     margin: 0;
   }
 
-  .details-box>p:first-child {
+  .details-box > p:first-child {
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
@@ -211,14 +211,14 @@
     justify-content: space-between;
   }
 
-  .what-we-did-container>.item {
+  .what-we-did-container > .item {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
     align-items: center;
   }
 
-  .what-we-did-container>.item>.label {
+  .what-we-did-container > .item > .label {
     color: black;
     font-style: normal;
     font-weight: 400;
@@ -229,7 +229,7 @@
     margin: auto;
   }
 
-  .what-we-did-container>.item>.index {
+  .what-we-did-container > .item > .index {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -333,19 +333,19 @@
       font-size: 16px;
     }
 
-    .stats>p:first-child {
+    .stats > p:first-child {
       font-size: 48px;
     }
   }
 
-  .project-highlights-grid>a>.item {
+  .project-highlights-grid > a > .item {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
     align-items: flex-baseline;
   }
 
-  .project-highlights-grid>a>.item>.index {
+  .project-highlights-grid > a > .item > .index {
     font-size: 24px;
     font-weight: 700;
     line-height: 24px;
@@ -354,7 +354,7 @@
     color: black;
   }
 
-  .project-highlights-grid>a>.item>.label {
+  .project-highlights-grid > a > .item > .label {
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -416,5 +416,9 @@
 
   body.dark-theme .details-box > p:first-child {
     color: #cccccc !important;
+  }
+
+  body.dark-theme .project-highlights-grid img {
+    filter: invert(0.5) brightness(1.5);
   }
 </style>
